# libpopcnt

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  LICENSE  Makefile  Makefile.msvc  README.md  appveyor.yml  benchmark.cpp  libpopcnt.h  popcnt.h  test.cpp
.github/workflows/: benchmark.yml  ci.yml
scripts/: benchmark-vs-prev-release.sh
test/: CMakeLists.txt  test1.cpp  test2.c
